# gfsm

./: .cvsignore  .gitignore  AUTHORS  Changes  Makefile.am  README.cvs  README.html  README.pod  README.txt  autoreconf.sh  configure.ac  configure.in  gfsm.magic  gfsm.pc.in  svntag.rc  wishlist.txt
doc/libgfsm/: .cvsignore  Makefile.am  doxy-filter.perl  libgfsm-header.html  libgfsm.doxy.dev  libgfsm.doxy.in  mainpage.dox  mainpage.dox.in
doc/programs/: .cvsignore  Makefile.am  gfsmapply.pod  gfsmarcsort.pod  gfsmarcuniq.pod  gfsmarith.pod  gfsmclosure.pod  gfsmcompact.pod  gfsmcompile.pod  gfsmcomplement.pod  gfsmcompose.pod  gfsmcompre.pod  gfsmconcat.pod  gfsmconnect.pod  gfsmconvert.pod  gfsmdepths.pod  gfsmdeterminize.pod  gfsmdifference.pod  gfsmdraw.pod  gfsmencode.pod  gfsmheader.pod  gfsmindex.pod  gfsminfo.pod  gfsmintersect.pod  gfsminvert.pod  gfsmlabels.pod  gfsmlookup.pod  gfsmminimize.pod  gfsmoptional.pod  gfsmprint.pod  gfsmproduct.pod  gfsmproject.pod  gfsmrenumber.pod  gfsmreplace.pod  gfsmreverse.pod  gfsmrmepsilon.pod  gfsmsigma.pod  gfsmstrings.pod  gfsmtrain.pod  gfsmunion.pod  (+3 more)
src/: Makefile.am
src/libgfsm/: .cvsignore  Makefile.am  api-deps.dot  api-deps2.dot  api-deps3.dot  api-deps4.dot  arclist-notes.txt  config.h  gfsm.c  gfsm.h  gfsmAlgebra.c  gfsmAlgebra.h  gfsmAlphabet.c  gfsmAlphabet.h  gfsmArc.c  gfsmArc.def  gfsmArc.h  gfsmArc.hi  gfsmArcIndex.c  gfsmArcIndex.h  gfsmArcIndex.hi  gfsmArcIter.c  gfsmArcIter.def  gfsmArcIter.h  gfsmArcIter.hi  gfsmArcList.c  gfsmArcList.def  gfsmArcList.h  gfsmArcList.hi  gfsmArith.c  gfsmArith.h  gfsmArray.c  gfsmArray.h  gfsmAssert.h  gfsmAutomaton.c  gfsmAutomaton.def  gfsmAutomaton.h  gfsmAutomaton.hi  gfsmAutomatonAPI.c  gfsmAutomatonAPI.h  (+124 more)
src/libgfsm/Attic/: gfsmArcList.h  gfsmBitVector.c  gfsmState.c  gfsmWeightMap.c
src/libgfsm/gnulib/: Makefile.am
src/libgfsm/pre-v0.0.10/: gfsmDeterminize.c  gfsmStateSet.c  gfsmWStateSet.c  gfsmWStateSet.h  gfsmWStateSet.hi
src/libgfsm/tests/: .cvsignore  Makefile  arcpaths.c  bsearch.perl  calctest.l  calctest.y  eswitchtest.c  floatunion.c  gfsmlabdump.c  iotest.c  labprobs.h  macrotest.i  ortest  pathtest.c  ptrdiff.c  seektest.c  sizetest.c  switchtest.c  uniontest.c  virtbench-split-funcs.c  virtbench-split.c  virtbench-split.h  virtbench-split1.c  virtbench-unsplit.c  virtbench.c
src/libgfsm/tests/module/: Makefile
src/programs/: .cvsignore  Makefile.am  c2.lab  c2a.tfst  c2b.tfst  config.h  gfsmapply.gog  gfsmapply_cmdparser.c  gfsmapply_cmdparser.h  gfsmapply_main.c  gfsmarcsort.gog  gfsmarcsort_cmdparser.c  gfsmarcsort_cmdparser.h  gfsmarcsort_main.c  gfsmarcuniq.gog  gfsmarcuniq_cmdparser.c  gfsmarcuniq_cmdparser.h  gfsmarcuniq_main.c  gfsmarith.gog  gfsmarith_cmdparser.c  gfsmarith_cmdparser.h  gfsmarith_main.c  gfsmclosure.gog  gfsmclosure_cmdparser.c  gfsmclosure_cmdparser.h  gfsmclosure_main.c  gfsmcompact.gog  gfsmcompact_cmdparser.c  gfsmcompact_cmdparser.h  gfsmcompact_main.c  gfsmcompile.gog  gfsmcompile_cmdparser.c  gfsmcompile_cmdparser.h  gfsmcompile_main.c  gfsmcomplement.gog  gfsmcomplement_cmdparser.c  gfsmcomplement_cmdparser.h  gfsmcomplement_main.c  gfsmcompose.gog  gfsmcompose_cmdparser.c  (+131 more)
src/programs/test/: min-1.tfsa  rme-hh2010.tfsa  rme-mohri2009.tfst  rme4.tfst  symtest.lab  test-ap.lab  test-ap.tfst
tests/: .cvsignore  01_basic.at  02_arith.at  03_algebra.at  Makefile.am  local.at  package.m4  testsuite.at
tests/data/: basic1.inf  decode-c-in.tfst  decode-c-key-in.tfst  decode-c-want.tfst  decode-cl-in.tfst  decode-cl-key-in.tfst  decode-l-in.tfst  decode-l-key-in.tfst  encode-c-enc-want.tfst  encode-c-key-want.tfst  encode-cl-enc-want.tfst  encode-cl-key-want.tfst  encode-in.tfst  encode-l-enc-want.tfst  encode-l-key-want.tfst  minimize-in.tfst  minimize-want.tfst  null.inf  rmepsilon-1-want.tfst  rmepsilon-2-in.tfst  rmepsilon-2-want.tfst  rmepsilon-3-in.tfst  rmepsilon-3-want.tfst  rmepsilon-want-2.tfst  t1.inf  test.lab
